src/components/ui/DataEntryBox/index.css
.datacard {
    height: auto !important;
    width: 90% !important;
    margin: 1rem auto !important;
    display: block !important;
    background-color: #fafafa !important;
}

.dataentrybutton {
    height: 100%;
    width: 100%;
}

.dataentrybox {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 100%;
    width: 100%;
}

.colormark {
    width: 0.7rem;
    min-height: 100%;
    align-self: stretch;
    border-top-left-radius: 3px;
    border-bottom-left-radius: 3px;
}

.titlebox {
    border-right: 1px solid;
    padding: 0 1rem;
    width: 80%;
}

.datebox {
    padding: 0 1.5rem;
    width: 67px;
}

